--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"@radix-ui/react-slot": "^1.0.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"framer-motion": "^10.18.0",
+		"lucide-react": "^0.486.0",
+		"motion": "^12.6.3",
 		"next": "14.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
